--- a/src/index.css
+++ b/src/index.css
@@ -1,13 +1,45 @@
+@tailwind base;
+@tailwind components;
+@tailwind utilities;
+
 body {
-  margin: 0;
-  font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', 'Roboto', 'Oxygen',
-    'Ubuntu', 'Cantarell', 'Fira Sans', 'Droid Sans', 'Helvetica Neue',
-    sans-serif;
-  -webkit-font-smoothing: antialiased;
-  -moz-osx-font-smoothing: grayscale;
+  @apply font-sans;
 }
 
-code {
-  font-family: source-code-pro, Menlo, Monaco, Consolas, 'Courier New',
-    monospace;
+.markdown-preview {
+  table {
+    border-collapse: collapse;
+    width: 100%;
+    margin-bottom: 1rem;
+    border: solid 1px black;
+  }
+
+  th,
+  td {
+    border: 1px solid black;
+    padding: 0.5rem;
+  }
+
+  th {
+    background-color: #374151;
+    color: white;
+  }
+  ul {
+    list-style: none;
+  }
+
+  ul > li::before {
+    content: "•";
+    display: inline-block;
+    width: 1em;
+    margin-left: -1rem;
+  }
+
+  ol {
+    list-style: decimal inside;
+  }
+
+  blockquote {
+    border-left-color: black;
+  }
 }
